sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:16: error: 'while' expected but '}' found.
    } }
      ^