sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {

  var b=getNombreValeurs()-2 
  
  
 do { for (i<-b to 0 by -1) {
     for (j<-0 to i) {
      if (!plusPetit (j,j+1)) {
       echange(j,j+1)
        
      }
       else {return}
     }
  }
    } }

